--- a/index.html
+++ b/index.html
@@ -90,11 +90,23 @@ function getRealContentHeight() {
 		
 		<h4> Jay P. Nichols: CEO and Chairman of Better Betters Inc. </h4>
 		<center> <p> <img src="jay.jpg" alt="jay"> </p>
-		<p>As an avid sports fan Jay Nicholls had an idea that there must be some way to predict NFL games using math and statistics.  
+		<p>As an avid sports fan, Jay Nicholls had an idea that there must be some way to predict NFL games using math and statistics.  
 		Using analysis of many years of NFL data, Better Betters was born.  Prior to starting Better Betters, Jay Nicholls was a Finance 
 		major with a minor in Economics at Framingham State University.  While playing hockey for FSU as an assistant captain, Mr. Nicholls 
 		was also involved in the community.  He was the President of the Business Leadership Club and also an intern at the MetroWest Economic 
 		Research Center (MERC) studying and reporting on the Cost of Living.   </p> </center>
+		
+		<h4> Melvin T. Rose: CTO and Lead Software Engineer of Better Betters Inc. </h4>
+		<center> <p> <img src="tim.jpg" width="300" height="200" alt="Tim" align= "absmiddle"> </p>
+		<p>As a close friend to Jay Nicholls at Framingham State University, a small idea of a Better Betters company began in a dorm room.
+		Prior to starting Better Betters, Melvin Rose was a Computer Science major at Framingham State University
+		with a concentration is Computer programming.  There friendship was forged as Melvin and Jay meet as teammates on
+		Framingham State's ice hockey team.  Rose was also a certified Apple technician and successful Software Engineering 
+		Intern at ElanTech Inc in Greenbelt, MD. Rose is well versed in many different computer languages including Java, JavaScript, 
+		C# and many more. 
+		</p> </center>
+		
+		<h3> <u> Our Mission </u> </h3>
 
 	<p>	
 At Better Betters we strive to provide winning picks primarily for NFL games and also NCAA Football using data analytics and in-depth research. 
@@ -123,10 +135,9 @@ At Better Betters we strive to provide winning picks primarily for NFL games and
 		</script>
 		
 	<div data-role="content" data-theme="a">	
-		<h2></h2>
+		<h2> <u>Services</u> </h2>
 		<div>
-		<p> <img src="" alt=""> </p>
-		<p> <u>Services</u> </p>
+		<img src="nfl.jpg" width="300" height="200" alt="nfl" align= "absmiddle"> 
 		<p>
 Our main purpose here at Better Betters is to provide the best possible professional service, with the utmost dedication at all times. 
 The rigors of the selection process of our employees who predict the games using our ground breaking mathematical algorithm is the reason 
@@ -135,6 +146,7 @@ to invest on to reap continual profit for all of our customers. This invaluable 
 College Football, but is also starting to be tweaked mathematically for all of the world’s top sports. By 2016 Better Betters will be providing
 predictions for the NHL, NBA, EPL, La Liga, Bundesliga, and many more leagues across the world. 
 
+<p> <img src="NCAAF.jpg" width="300" height="200" alt="Tim" align= "absmiddle"> </p>
 		</div>
 		<p><a href="#one" data-rel="back" data-role="button" data-inline="true" data-icon="back">Home</a></p>			
 	</div><!-- /content -->
@@ -198,48 +210,14 @@ predictions for the NHL, NBA, EPL, La Liga, Bundesliga, and many more leagues ac
 		</script>
 		
 	<div data-role="content" data-theme="a">	
-		<h2></h2>
+		<h2>Contact us at BetterBetters@yahoo.com or 443-852-2680 or submit us a response below</h2>
 		<div>
-		<form id="" name="" method="get" action="UnderConstruction.html">
-  Name
-  <label>
-  <input type="text" name="memname" id="memname" />
-  </label>
-  <br>
-  gender
-  </br>
-  <br>
-  not given
-  </br>
-  <label>
-  <input name="gender" type="radio"  value="n" checked="checked" />
-  </label>
-  male
-  <label>
-  <input name="gender"  type="radio" value="m" />
-  </label>
-  <br>
-  female
-  </br>
-  <label>
-  <input name="gender" type="radio" value="f" />
-  </label>
-  favorite type of reptile 
-  <br>
-  <label>
-  <select name="favorite" id="favorite">
-    <option value="l">Lizards</option>
-    <option value="s">snakes</option>
-    <option value="t">turtles</option>
-  </select>
-  </br>
-  </label>
-  <br />
-  <br />
-  <label>
-  <input type="submit" name="button" id="button" value="Submit" />
-  </label>
-</form>
+		<form method="post" action="underConstruction.html">
+      <label for="fname">Name:</label>
+      <input type="text" name="fname" id="fname">
+	  <textarea name="textarea" id="textarea-a" class="ui-input-text ui-body-c ui-corner-all ui-shadow-inset" style="height: 93px;">                                                                                                                                                       
+	  </textarea>
+      <input type="submit" value="Submit Button"/>
 		
 		</div>
 		<p><a href="#one" data-rel="back" data-role="button" data-inline="true" data-icon="back">Home</a></p>			
