--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ function getRealContentHeight() {
 		<div>
 		
 		<h2> <u>About the Company</u> </h2>	
-		
+	
 		<h4> Jay P. Nichols: CEO and Chairman of Better Betters Inc. </h4>
 		<center> <p> <img src="jay.jpg" alt="jay"> </p>
 		<p>As an avid sports fan, Jay Nicholls had an idea that there must be some way to predict NFL games using math and statistics.  
@@ -116,6 +116,11 @@ At Better Betters we strive to provide winning picks primarily for NFL games and
  much more. Using this algorithm to predict College Football and the National football league, Better Betters Inc. has established a high 
  percentage of wins that would help our customers not only invest smart, but continue to win smart. 
 
+ 
+ <center> <p> <img src="timJay.jpg" width="400" height="350" alt="TimJay" align= "absmiddle"> </p> </center>
+		<center> <h6> CEO and CTO at the Company Christmas party </h6> </center>
+		
+		
 		</div>
 		<p><a href="#one" data-rel="back" data-role="button" data-inline="true" data-icon="back">Home</a></p>			
 	</div><!-- /content -->
