--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@ function getRealContentHeight() {
 		<h4> Melvin T. Rose: CTO and Lead Software Engineer of Better Betters Inc. </h4>
 		<center> <p> <img src="tim.jpg" width="300" height="200" alt="Tim" align= "absmiddle"> </p>
 		<p>As a close friend to Jay Nicholls at Framingham State University, a small idea of a Better Betters company began in a dorm room.
-		Prior to starting Better Betters, Melvin Rose was a Computer Science major at Framingham State University
-		with a concentration is Computer programming.  There friendship was forged as Melvin and Jay meet as teammates on
+		Prior to helping start Better Betters, Melvin Rose was a Computer Science major at Framingham State University
+		with a concentration in Computer programming.  Their friendship was forged as Melvin and Jay met as teammates on
 		Framingham State's ice hockey team.  Rose was also a certified Apple technician and successful Software Engineering 
-		Intern at ElanTech Inc in Greenbelt, MD. Rose is well versed in many different computer languages including Java, JavaScript, 
+		Intern at ElanTech Inc. in Greenbelt, MD. Rose is well versed in many different computer languages including Java, JavaScript, 
 		C# and many more. 
 		</p> </center>
 		
 		<h3> <u> Our Mission </u> </h3>
 
 	<p>	
-At Better Betters we strive to provide winning picks primarily for NFL games and also NCAA Football using data analytics and in-depth research. 
+ At Better Betters we strive to provide winning picks primarily for NFL games and also NCAA Football using data analytics and in-depth research. 
  Using historical data combined with intangible current knowledge of players, coaches, and long term trends among teams, we strive to analyze 
  every game to provide our customers with the most potentially profitable picks of the week.  A sophisticated algorithm is tested every Saturday 
  for College Football and Sunday for the NFL using vast amounts of data such as; points for/against, passing and rushing yards for/against and 
@@ -145,8 +145,8 @@ At Better Betters we strive to provide winning picks primarily for NFL games and
 		<img src="nfl.jpg" width="300" height="200" alt="nfl" align= "absmiddle"> 
 		<p>
 Our main purpose here at Better Betters is to provide the best possible professional service, with the utmost dedication at all times. 
-The rigors of the selection process of our employees who predict the games using our ground breaking mathematical algorithm is the reason 
-why Better Betters is a company for Success. We provide our customers with the most highly studied and calculated games to not bet on, but
+Our employees use our custom ground breaking algorithm to predict the games. This is the reason 
+why Better Betters is a company for Success. We provide our customers with the most highly studied and calculated games to not just bet on, but
 to invest on to reap continual profit for all of our customers. This invaluable service we provide is not only being perfected for NFL and 
 College Football, but is also starting to be tweaked mathematically for all of the world’s top sports. By 2016 Better Betters will be providing
 predictions for the NHL, NBA, EPL, La Liga, Bundesliga, and many more leagues across the world. 
@@ -176,12 +176,12 @@ predictions for the NHL, NBA, EPL, La Liga, Bundesliga, and many more leagues ac
 		
 		<p> <img src="job1.jpg" width="300" height="200" alt="analyst" align= "absmiddle"> </p>
 		<h4><u> Research Analyst</u></h4>
-		<p> Better Betters Inc is currently looking for driven men or woman with a passion for sports and research. This job requires
+		<p> Better Betters Inc is currently looking for driven individuals with a passion for sports and research. This job requires
 		a strong background in mathematical analysis and statistics. A confidentiality agreement would be required to be signed upon hiring</p>
 		
 		<p> <img src="job2.jpg" width="300" height="200" alt="webDev" align= "absmiddle"> </p>
 		<h4><u> Web Developer</u></h4>
-		<p> Better Betters Inc is currently looking for a man or women with expertise in JavaScript, C#, and web development to help us 
+		<p> Better Betters Inc is currently looking for individuals with expertise in JavaScript, C#, and web development to help us 
 		build our up in coming website. A strong knowledge of web development and design are needed for this position including a strong background
 		in sports. </p>
 		
