--- a/underConstruction.html
+++ b/underConstruction.html
@@ -5,7 +5,7 @@
 </head>
 <center>
 <body  bgcolor="black">
-<font color="white">
+<font color="red">
 <h1> <u>Better Betters Inc.</u> </h1>
 <h3>This page is under construction. Please come back soon!</h3>
 </font>
